@startuml Conception_Model_Vehicules
hide circle
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam defaultMonospaceFontName Arial
skinparam defaultFontSize 10
skinparam linetype ortho
skinparam shadowing false
skinparam wrapWidth 1200
skinparam nodesep 6
skinparam ranksep 220
top to bottom direction

title Sous-diagramme 2/4 — Véhicules et Opérations

package "Domaine - Véhicules & Opérations" {
class BusUDM {
  - busudm_id : int
  - numero : varchar
  - immatriculation : varchar
  - etat_vehicule : enum
  - nombre_places : int
  - kilometrage : int
  - numero_chassis : varchar
  - type_vehicule : enum
  - marque : varchar
  + estDisponible(date : date) : boolean
  + majKilometrage(km : int) : void
  + programmerMaintenance(date : date, type : String) : void
  + getDernieresOperations() : List
}

class DocumentBusUDM {
  - document_id : int
  - busudm_id : int
  - type_document : enum
  - date_debut : date
  - date_expiration : date
  + estValide() : boolean
  + renouveler(dateExpiration : date) : void
}

class FuelAlertState {
  - id : int
  - busudm_id : int
  - last_threshold : int
  + verifierSeuil(currentLevel : int) : boolean
  + notifierSiBas() : void
}

class Carburation {
  - carburation_id : int
  - busudm_id : int
  - date_carburation : date
  - kilometrage : int
  - quantite_litres : decimal
  - prix_unitaire : decimal
  - cout_total : decimal
  + calculerCout() : decimal
}

class Vidange {
  - vidange_id : int
  - busudm_id : int
  - date_vidange : date
  - kilometrage : int
  - type_huile : enum
  + planifier(date : date) : void
}

class PanneBusUDM {
  - panne_id : int
  - busudm_id : int
  - date_heure : datetime
  - description : text
  - criticite : enum
  - immobilisation : boolean
  - resolue : boolean
  + marquerResolu() : void
  + assignerDepannage(depannageId : int) : void
}

class Depannage {
  - depannage_id : int
  - busudm_id : int
  - date_heure : datetime
  - kilometrage : decimal
  - cout_reparation : decimal
  - description_panne : text
  - repare_par : varchar
  + ouvrir() : void
  + clore() : void
  + estCloture() : boolean
}
}

' Associations de ce sous-domaine
BusUDM "1" -- "0..*" Carburation : ravitailler
BusUDM "1" -- "0..*" Vidange : vidanger
BusUDM "1" -- "0..*" PanneBusUDM : signaler
BusUDM "1" -- "0..*" Depannage : depanner
BusUDM "1" -- "0..*" DocumentBusUDM : documenter
BusUDM "1" -- "0..1" FuelAlertState : alerter

PanneBusUDM "1" -- "0..*" Depannage : corriger

@enduml
